--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,20 +10,15 @@ Authors@R:
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    ggplot2
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports: 
-  dplyr,
-  tidyr,
-  readr,
-  ggplot2,
-  RHRV
-  
-Suggests:
-  formattable,
-  arsenal
-  
+    dplyr,
+    readr,
+    tidyr,
+    RHRV
