--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 Suggests: 
     testthat (>= 3.0.0),
-    ggplot2
+    ggplot2,
+    vroom
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
