--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,7 @@ Suggests:
     vroom
 Config/testthat/edition: 3
 Encoding: UTF-8
-LazyData: true
+LazyData: false
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports: 
