CRAN-read version 1.1.0

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,7 +1,14 @@
-^tidyrhrv\.Rproj$
+^.*\.Rproj$
 ^\.Rproj\.user$
-^LICENSE\.md$
-^README\.Rmd$
-^cran-comments\.md$
+^\.RData$
+^\.Rhistory$
+^\.git$
 ^\.github$
+^\.gitignore$
+^README\.Rmd$
+^README\.md$
+^cran-comments\.md$
 ^CRAN-RELEASE$
+^.*\.Rcheck$
+^\.\.Rcheck$
+^CRAN-SUBMISSION$
