--- a/tidyrhrv.Rcheck/00_pkg_src/tidyrhrv/DESCRIPTION
+++ b/tidyrhrv.Rcheck/00_pkg_src/tidyrhrv/DESCRIPTION
@@ -15,26 +15,14 @@ Description: Allows users to quickly load multiple patients' electrocardiographi
     predefined folder. This streamlines the workflow for HRV analysis across 
     multiple datasets.
 License: MIT + file LICENSE
-Suggests: 
-    testthat (>= 3.0.0),
-    ggplot2,
-    vroom,
-    readr
+Suggests: testthat (>= 3.0.0), ggplot2, vroom, readr
 Config/testthat/edition: 3
 Encoding: UTF-8
-LazyData: false
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-Imports: 
-    dplyr,
-    tidyr,
-    RHRV,
-    purrr,
-    magrittr,
-    pracma,
-    tibble,
-    utils,
-    stats,
-    grDevices
+Imports: dplyr, tidyr, RHRV, purrr, magrittr, pracma, tibble, utils,
+        stats, grDevices
 Author: Steven Lawrence [aut, cre] (<https://orcid.org/0000-0002-7595-8323>)
 Maintainer: Steven Lawrence <stevenlawrence.r@gmail.com>
+NeedsCompilation: no
+Packaged: 2025-07-09 16:17:05 UTC; stevenlawrence
