--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,13 +7,16 @@ Authors@R:
            role = c("aut", "cre"),
            email = "stevenlawrence.r@gmail.com",
            comment = c(ORCID = "0000-0002-7595-8323"))
-Description: Allows users to quickly load multiple patients' 'electrocardiographic' 
+Description: Allows users to quickly load multiple patients' electrocardiographic 
     (ECG) data at once and conduct relevant time analysis of heart rate variability 
-    ('HRV') without manual edits from a physician or data cleaning specialist. 
+    (HRV) without manual edits from a physician or data cleaning specialist. 
     The package provides the unique ability to iteratively filter, plot, 
     and store time analysis results in a data frame while writing plots to a 
-    predefined folder. This streamlines the workflow for 'HRV' analysis across 
-    multiple datasets.
+    predefined folder. This streamlines the workflow for HRV analysis across 
+    multiple datasets. Methods are based on Rodríguez-Liñares et al. (2011) 
+    <doi:10.1016/j.cmpb.2010.05.012>. Examples of applications using this 
+    package include Kwon et al. (2022) <doi:10.1007/s10286-022-00865-2> and 
+    Lawrence et al. (2023) <doi:10.1016/j.autneu.2022.103056>.
 License: MIT + file LICENSE
 Suggests: 
     testthat (>= 3.0.0),
